# doublezero-solana

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/: CODEOWNERS
.github/workflows/: local-validator.yml  rust.yml  test_validator.yml  verify-build.yml
crates/2z-cli/: Cargo.toml
crates/2z-cli/src/: lib.rs  main.rs  payer.rs  rpc.rs  serviceability.rs  transaction.rs
crates/2z-cli/src/command/: admin.rs  ata.rs  contributor.rs  mod.rs  prepaid.rs  validator.rs
crates/2z-cli/src/command/admin/: configure.rs  mod.rs  passport.rs  revenue_distribution.rs
crates/2z-cli/src/command/passport/: mod.rs
crates/2z-cli/src/command/revenue_distribution/: mod.rs
crates/client-tools/: Cargo.toml
crates/client-tools/examples/: get_blocks.rs  log_output.rs
crates/client-tools/src/: lib.rs  log.rs  payer.rs  rpc.rs  transaction.rs  zero_copy.rs
crates/contributor-revenue/: Cargo.toml
crates/contributor-revenue/src/: lib.rs  main.rs
crates/contributor-revenue/tests/: test_demand.rs  test_pub_links.rs  (+1 more)
crates/contributor-rewards/: Cargo.toml
crates/contributor-rewards/src/: main.rs  network.rs  settings.rs  validation.rs
crates/contributor-rewards/src/calculator/: csv_exporter.rs  input.rs  ledger_operations.rs  orchestrator.rs  proof.rs  recorder.rs  shapley_handler.rs
crates/contributor-rewards/src/ingestor/: demand.rs  epoch.rs  internet.rs  serviceability.rs
crates/contributor-rewards/src/processor/: process.rs  stats.rs  util.rs
crates/contributor-rewards/tests/: demand_input.json  internet_data.json  test_demand.rs  test_pub_links.rs  test_sanity.rs
crates/passport/admin/: Cargo.toml
crates/passport/admin/src/: command.rs  main.rs
crates/program-tools/: CHANGELOG.md  Cargo.toml  README.md
crates/program-tools/src/: bitmap.rs  instruction.rs  lib.rs  system.rs  types.rs  zero_copy.rs
crates/program-tools/src/account_info/: iter.rs  mod.rs  upgrade_authority.rs
crates/program-tools/src/recipe/: create_account.rs  create_token_account.rs  mod.rs
crates/program-tools/src/zero_copy/: account_info.rs  mod.rs
crates/revenue-distribution/admin/: Cargo.toml
crates/revenue-distribution/admin/src/: command.rs  main.rs
crates/sentinel/: Cargo.toml
crates/sentinel/src/: error.rs  lib.rs  main.rs  settings.rs
crates/sentinel/src/client/: doublezero.rs  doublezero_ledger.rs  mod.rs  solana.rs
crates/sentinel/src/sentinel/: handler.rs  listener.rs  mod.rs
crates/validator-revenue/: Cargo.toml
crates/validator-revenue/src/: block.rs  fee_payment_calculator.rs  inflation.rs  jito.rs  ledger.rs  lib.rs  rewards.rs  validator_payment.rs  worker.rs
docs/rfc/: 0001_ALLOW_WRITING_OFF_DEBT_FOR_SAME_DISTRIBUTION.md  0002_IMPROVED_DEBT_WRITE_OFF_TRACKING.md  0003_BAD_DEBT_RECOVERY_AND_ERRONEOUS_DEBT_ACCOUNTING.md  0004_ALLOW_DIRECT_2Z_PAYMENTS_FOR_NETWORK_RESOURCES.md  README.md
localnet/: devnet_doublezero_mint.json
mock/rewards-integration/: Cargo.toml
mock/swap-sol-2z/: Cargo.toml
mock/swap-sol-2z/src/: instruction.rs  lib.rs  processor.rs
mock/swap-sol-2z/src/state/: fills_tracker.rs  mod.rs
programs/: sha256sums_development.txt  sha256sums_mainnet_beta.txt
programs/passport/: CHANGELOG.md  Cargo.toml
programs/passport/src/: lib.rs  processor.rs
programs/passport/src/instruction/: account.rs  mod.rs
programs/passport/src/state/: access_request.rs  mod.rs  program_config.rs
programs/passport/tests/: configure_program_test.rs  deny_access_test.rs  grant_access_test.rs  initialize_program_test.rs  request_access_test.rs  set_admin_test.rs
programs/passport/tests/common/: mod.rs
programs/revenue-distribution/: CHANGELOG.md  Cargo.toml  README.md
programs/revenue-distribution/src/: env.rs  instruction.rs  integration.rs  lib.rs  processor.rs  types.rs
programs/revenue-distribution/src/instruction/: account.rs  mod.rs
programs/revenue-distribution/src/state/: contributor_rewards.rs  distribution.rs  journal.rs  mod.rs  prepaid_connection.rs  prepaid_user.rs  rewards_integration.rs  solana_validator_deposit.rs
programs/revenue-distribution/src/state/contributor_rewards/: mod.rs  recipient_shares.rs
programs/revenue-distribution/src/state/journal/: mod.rs  prepaid_connection.rs
programs/revenue-distribution/src/state/program_config/: community_burn_rate.rs  distribution.rs  mod.rs  prepaid_connection.rs  relay.rs
programs/revenue-distribution/tests/: collect_integration_rewards_test.rs  configure_contributor_rewards_test.rs  configure_distribution_debt_test.rs  configure_distribution_payments_test.rs  configure_distribution_rewards_test.rs  configure_distribution_test.rs  configure_journal_test.rs  configure_program_test.rs  deny_prepaid_connection_access_test.rs  distribute_rewards_test.rs  enable_erroneous_solana_validator_debt_test.rs  enable_solana_validator_debt_write_off_test.rs  finalize_distribution_debt_test.rs  finalize_distribution_payments_test.rs  finalize_distribution_rewards_test.rs  forgive_solana_validator_debt_test.rs  grant_prepaid_connection_access_test.rs  initialize_contributor_rewards_test.rs  initialize_distribution_test.rs  initialize_journal_test.rs  initialize_prepaid_connection_test.rs  initialize_program_test.rs  initialize_rewards_integration_test.rs  initialize_solana_validator_deposit_test.rs  initialize_swap_destination_test.rs  integration_test.rs  load_prepaid_connection_test.rs  pay_solana_validator_debt_test.rs  reclassify_bad_solana_validator_debt_test.rs  recover_bad_solana_validator_debt_test.rs  resolve_bad_solana_validator_debt_test.rs  set_admin_test.rs  set_distribution_economic_burn_rate_test.rs  set_rewards_manager_test.rs  sweep_distribution_tokens_test.rs  terminate_prepaid_connection_test.rs  verify_distribution_merkle_root_test.rs  verify_distribution_payment_test.rs  withdraw_sol_test.rs  withdraw_solana_validator_deposit_test.rs  (+1 more)
programs/revenue-distribution/tests/common/: mod.rs
sh/: run_local_validator_clean.sh  run_local_validator_fork_devnet.sh  run_solana_test_validator.sh  test_2z_cli_clean.sh  test_admin_cli_clean.sh  test_devnet_upgrade.sh
(+22 files in other folders)
