[workspace]
exclude = []
members = [
    "crates/program-tools",
    "mock/swap-sol-2z",
    "programs/passport",
    "programs/revenue-distribution",
]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://doublezero.xyz"
license = "Apache-2.0"
repository = ""
rust-version = "1.84"
version = "0.0.0"

[workspace.dependencies]
base64 = "0.22"
bincode = "1"
borsh = "1"
bytemuck = "1"
itertools = "0.14"
ruint = { version = "1", features = ["bytemuck"] }
solana-account-info = "2"
solana-cpi = "2"
solana-hash = "2"
solana-instruction = "2"
solana-loader-v3-interface = "5"
solana-msg = "2"
solana-program-entrypoint = "2"
solana-program-error = "2"
solana-program-memory = "2"
solana-program-pack = "2"
solana-pubkey = "2"
solana-sha256-hasher = "2"
solana-system-interface = "1"
solana-sysvar = "2"
spl-associated-token-account-interface = "1"
spl-token = { version = "8", features = ["no-entrypoint"] }
svm-hash = "0.1.0"

### Please keep these packages pinned for now.
sha2-const-stable = "=0.1.0"
solana-program-test = "=2.3.9"
solana-sdk = "=2.3"

[workspace.dependencies.doublezero-passport]
path = "programs/passport"

[workspace.dependencies.doublezero-program-tools]
path = "crates/program-tools"

[workspace.dependencies.doublezero-revenue-distribution]
path = "programs/revenue-distribution"

[workspace.dependencies.mock-swap-sol-2z]
path = "mock/swap-sol-2z"
