[workspace]
exclude = []
members = [
    "crates/program-tools",
    "mock/swap-sol-2z",
    "programs/passport",
    "programs/revenue-distribution",
]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://doublezero.xyz"
license = "Apache-2.0"
repository = ""
rust-version = "1.84.1"
version = "0.0.0"

[workspace.dependencies]
base64 = "0.22"
bincode = "1"
borsh = "1"
bytemuck = "1"
itertools = "0.14"
ruint = { version = "<=1.16", features = ["bytemuck"] }
solana-account-info = ">=2,<=3"
solana-cpi = ">=2,<=3"
solana-instruction = ">=2,<=3"
solana-loader-v3-interface = ">=5,<=6"
solana-msg = ">=2,<=3"
solana-program-entrypoint = ">=2,<=3"
solana-program-error = ">=2,<=3"
solana-program-memory = ">=2,<=3"
solana-program-pack = ">=2,<=3"
solana-pubkey = ">=2,<=3"
solana-system-interface = { version = ">=1,<=3", features = ["bincode"] }
solana-sysvar = ">=2,<=3"
spl-associated-token-account-interface = ">=1,<=2"
spl-token-interface = ">=1,<=2"
svm-hash = ">=0.1,<=0.2"

### Please keep these packages pinned for now.
sha2-const-stable = "=0.1.0"
solana-program-test = "=3.0.12"
solana-sdk = "=3.0"

[workspace.dependencies.doublezero-passport]
path = "programs/passport"

[workspace.dependencies.doublezero-program-tools]
path = "crates/program-tools"

[workspace.dependencies.doublezero-revenue-distribution]
path = "programs/revenue-distribution"

[workspace.dependencies.mock-swap-sol-2z]
path = "mock/swap-sol-2z"
