[workspace]
exclude = []
members = [
    "crates/program-tools",
    "mock/swap-sol-2z",
    "programs/passport",
    "programs/revenue-distribution",
]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://doublezero.xyz"
license = "Apache-2.0"
repository = ""
version = "0.0.0"

[workspace.dependencies]
base64 = "0.22"
bincode = "1"
borsh = { version = "1", features = ["derive"] }
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
ctor = "0.4"
env_logger = "0.11"
itertools = "0.14"
log = "0.4"
ruint = { version = "1", features = ["bytemuck"] }
solana-account-info = ">=2,<=3"
solana-cpi = ">=2,<=3"
solana-instruction = { version = ">=2,<=3", features = ["syscalls"] }
solana-loader-v3-interface = { version = ">=5,<=6", features = ["serde"] }
solana-msg = ">=2,<=3"
solana-program-entrypoint = ">=2,<=3"
solana-program-error = ">=2,<=3"
solana-program-memory = ">=2,<=3"
solana-program-pack = ">=2,<=3"
solana-pubkey = { version = ">=2,<=3", features = ["borsh", "bytemuck"] }
solana-system-interface = { version = ">=1,<=3", features = ["bincode"] }
solana-sysvar = { version = ">=2,<=3", features = ["bincode"] }
spl-associated-token-account-interface = ">=1,<=2"
spl-token-interface = ">=1,<=2"
svm-hash = { version = ">=0.1,<=0.2", features = ["borsh", "bytemuck"] }

### Please keep these packages pinned for now.
sha2-const-stable = "=0.1.0"
solana-program-test = { version ="=3.1.12", features = ["agave-unstable-api"] }
solana-sdk = "=3.0"

[workspace.dependencies.doublezero-passport]
path = "programs/passport"

[workspace.dependencies.doublezero-program-tools]
path = "crates/program-tools"
features = ["entrypoint"]

[workspace.dependencies.doublezero-revenue-distribution]
path = "programs/revenue-distribution"

[workspace.dependencies.mock-swap-sol-2z]
path = "mock/swap-sol-2z"
