[package]
name = "doublezero-solana-client-tools"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
clap.workspace = true
doublezero-program-tools.workspace = true
serde_json.workspace = true
solana-client.workspace = true
solana-commitment-config.workspace = true
solana-sdk.workspace = true
solana-transaction-status-client-types.workspace = true
url.workspace = true
tracing = { optional = true, workspace = true }

[dev-dependencies]
leaky-bucket = "1"
solana-rpc-client-types = "2"
solana-reward-info = "2"
tokio.workspace = true
tracing-subscriber = "0.3"

[features]
tracing = ["dep:tracing"]