[package]
name = "doublezero-solana-contributor-rewards"
description = "Crate that processes rewards for contributors"

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
backon.workspace = true
borsh.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
csv.workspace = true
doublezero-serviceability.workspace = true
doublezero-telemetry.workspace = true
doublezero-record.workspace = true
governor.workspace = true
network-shapley.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-account-decoder.workspace = true
solana-epoch-info.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-system-interface.workspace = true
svm-hash.workspace = true
tabled.workspace = true
tempfile = "3"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
doublezero_sdk.workspace = true
futures-util.workspace = true
