[package]
name = "doublezero-program-tools"
description = "DoubleZero SVM Utilities"
publish = false

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bincode.workspace = true
borsh.workspace = true
bytemuck.workspace = true
ruint.workspace = true
sha2-const-stable.workspace = true
solana-account-info.workspace = true
solana-cpi.workspace = true
solana-instruction.workspace = true
solana-loader-v3-interface.workspace = true
solana-msg.workspace = true
solana-program-error.workspace = true
solana-program-pack.workspace = true
solana-pubkey.workspace = true
solana-system-interface.workspace = true
solana-sysvar.workspace = true
spl-token-interface.workspace = true

[features]
default = []
entrypoint = []
