[package]
name = "doublezero-ledger-sentinel"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bincode.workspace = true
borsh.workspace = true
clap.workspace = true
config = "0"
doublezero-passport.workspace = true
doublezero-program-tools.workspace = true
futures.workspace = true
metrics = "0"
metrics-exporter-prometheus = "0"
serde.workspace = true
serde_json.workspace = true
solana-account-decoder-client-types.workspace = true
solana-client.workspace = true
solana-commitment-config.workspace = true
solana-sdk.workspace = true
solana-transaction-status-client-types.workspace = true
solana-system-interface.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "registry", "fmt"] }
url.workspace = true

[[bin]]
name = "doublezero-sentinel"
path = "src/main.rs"
