[package]
name = "doublezero-solana-validator-revenue"

description = "Crate that processes revenue for validators"

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
borsh.workspace = true
chrono.workspace = true
doublezero-record.workspace = true
doublezero_sdk.workspace = true
futures.workspace = true
mockall.workspace = true
reqwest.workspace = true
serde.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status-client-types.workspace = true
svm-hash.workspace = true
tokio.workspace = true
