[package]
name = "mock-swap-sol-2z"
publish = false

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
borsh.workspace = true
bytemuck.workspace = true
doublezero-program-tools.workspace = true
doublezero-revenue-distribution.workspace = true
solana-account-info.workspace = true
solana-cpi.workspace = true
solana-instruction.workspace = true
solana-msg.workspace = true
solana-program-entrypoint.workspace = true
solana-program-error.workspace = true
solana-pubkey.workspace = true
solana-system-interface.workspace = true
solana-sysvar.workspace = true
spl-token-interface.workspace = true

[features]
default = []
development = ["doublezero-revenue-distribution/development"]
entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(custom_heap)'] }
