[package]
name = "doublezero-passport"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
borsh = { workspace = true, features = ["derive"] }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
doublezero-program-tools.workspace = true
solana-account-info.workspace = true
solana-msg.workspace = true
solana-program-entrypoint.workspace = true
solana-program-error.workspace = true
solana-pubkey = { workspace = true, features = ["borsh", "bytemuck"] }
solana-sysvar.workspace = true

[dev-dependencies]
base64.workspace = true
bincode.workspace = true
solana-loader-v3-interface.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true

[features]
default = []
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(custom_heap)'] }
