[package]
name = "doublezero-revenue-distribution"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bitmaps.workspace = true
borsh = { workspace = true, features = ["derive"] }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
doublezero-program-tools.workspace = true
solana-account-info.workspace = true
solana-cpi.workspace = true
solana-hash = { workspace = true, features = ["borsh", "bytemuck"] }
solana-msg.workspace = true
solana-program-entrypoint.workspace = true
solana-program-error.workspace = true
solana-program-pack.workspace = true
solana-pubkey = { workspace = true, features = ["borsh", "bytemuck"] }
solana-system-interface.workspace = true
solana-sysvar.workspace = true
spl-token.workspace = true

[dev-dependencies]
base64.workspace = true
bincode.workspace = true
solana-loader-v3-interface.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true

[features]
default = []
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(custom_heap)'] }
