[package]
name = "doublezero-revenue-distribution"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
borsh = { workspace = true, features = ["derive"] }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
doublezero-program-tools = { workspace = true, features = ["entrypoint"] }
solana-account-info.workspace = true
solana-cpi.workspace = true
solana-instruction.workspace = true
solana-msg.workspace = true
solana-program-entrypoint.workspace = true
solana-program-error.workspace = true
solana-program-memory.workspace = true
solana-program-pack.workspace = true
solana-pubkey = { workspace = true, features = ["borsh", "bytemuck"] }
solana-system-interface.workspace = true
solana-sysvar.workspace = true
spl-token.workspace = true
svm-hash = { workspace = true, features = ["borsh", "bytemuck"] }

[dev-dependencies]
bincode.workspace = true
solana-loader-v3-interface.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true

[features]
default = []
### Build with this feature for Solana devnet and localnet.
development = []
entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(custom_heap)'] }

### TODO: Add release profile.
