[package]
name = "doublezero-revenue-distribution"
version = "0.3.4"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
borsh.workspace = true
bytemuck.workspace = true
doublezero-program-tools.workspace = true
ruint.workspace = true
solana-account-info.workspace = true
solana-cpi.workspace = true
solana-instruction.workspace = true
solana-msg.workspace = true
solana-program-entrypoint.workspace = true
solana-program-error.workspace = true
solana-program-memory.workspace = true
solana-program-pack.workspace = true
solana-pubkey.workspace = true
solana-system-interface.workspace = true
solana-sysvar.workspace = true
spl-associated-token-account-interface.workspace = true
spl-token-interface.workspace = true
svm-hash.workspace = true

[dev-dependencies]
bincode.workspace = true
ctor.workspace = true
env_logger.workspace = true
log.workspace = true
mock-swap-sol-2z.workspace = true
solana-loader-v3-interface.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true

[features]
default = []
### Build with this feature for Solana devnet and localnet.
development = []
entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(custom_heap)'] }

### TODO: Add release profile.
